--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Gulp Boilerplate</title>
+	<title>Three JS CookBook</title>
 	<link rel="stylesheet" type="text/css" href="dist/css/main.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="dist/favicon.png">
 </head>
 <body>
-  <h1>Gulp</h1>
   <script src="dist/js/bundle.js"></script>
 </body>
 </html>
