add audio player and audio context API to project

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <link rel="icon" href="dist/favicon.png">
 </head>
 <body>
+
+    <div id="content">
+
+        <label for="audioFile" class="audio-file"> Choose an audio file
+            <input type="file" id="audioFile" accept="audio/*" />
+        </label>
+
+        <audio id="audioPlayer" controls></audio>
+        <div id="output"></div>
+    </div>
   <script src="dist/js/bundle.js"></script>
 </body>
 </html>
