redone obj init logic

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <audio id="audioPlayer" controls></audio>
         <div id="output"></div>
     </div>
+    <script>
+      var objCase = [];
+    </script>
   <script src="dist/js/bundle.js"></script>
 </body>
 </html>
